Added LightningRod and more configuration options.

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 
 /src/minecraft/*
 /src/minecraft_server/*
-!/src/minecraft/halvors/*
+!/src/minecraft/halvors/
 !/src/minecraft/mcmod.info
 
 *.bat
